@@ -2133,6 +2133,28 @@ Whoops. Ivan insert bourgeoisie to wood chipper! What mess!
 Lucky that glorious CCCP sewer rats ooze from holes in workshop floor and
 devour and clean bourgeois mess! Glory be Communism!
 
+Leader on May 6 2003
+--------------------
+
+Leader command Ivan test bonefiles.
+To do so, Ivan must die.
+It leader habit to delegate all tough tasks to citizens.
+Although kicking the bucket not so bad in IVAN due to wands of resurrection.
+Oh, if just one of them existed in real life!
+Uncle Lenin could finally return and lead country to glorious future.
+In fact leader already asked CCCP scientists research these but to no avail.
+They keep zapping stick made of bone at corpses and nothing happens.
+
+When Ivan done with task, he draw harp of charming.
+It used to tame creatures.
+Another item which leader like to have.
+Just a couple of tunes and all adjacent political enemies would become
+friendly and obedient.
+Indeed, they'd follow leader without question!
+And get stuck in corners a lot.
+
+Ivan ready on feThursday.
+
 ----------------------------------------------------------------------------
 
 End of document.
