@@ -11,4 +11,3 @@ Dagger is "somewhat difficult to use" if one has 9 strength.
 Horn of bravery is useless.
 Repeadatly reading and cancelling reading a scroll gives lots of wisdom
 Selling silver golem limbs is too good business.
-
