@@ -34,12 +34,12 @@ Highscores don't always fit to the screen.
 //Pet ghosts don't gain any strength exp.
 Throwing a potion of water at a wall in a shop makes the guards hostile.
 //Ghosts can be poisoned.
-If the player can attack with arms but is a more powerful kicker, the danger system still only checks the arm attack.
+(s) If the player can attack with arms but is a more powerful kicker, the danger system still only checks the arm attack.
 //"You hit something! Something manages to block the attack with its steel sword +1!"
 //It is not possible to zap a wielded item.
 (s) The bone file code doesn't handle shelves correctly. (but there are never shelves in bone levels)
 (s) The bone file code doesn't handle shops correctly. (but there are never shops in bone levels)
-The head of Ivan is left in bone levels.
+(s) The head of Ivan is left in bone levels.
 "You faint. You hit the floating eye! It is not hurt."
 Kamikaze dwarves die smiling even if headless.
 //"You feel a slight tingling in your hands." when armless.
