@@ -27,6 +27,7 @@ Frying pan.
 Clothes peg.
 Showel.
 Sausage.
+Fungi.
 
 Bronze hammer on gravel floor is not very clear.
 Goblin berserker on grassy ground is really NOT visible.
