@@ -23,7 +23,6 @@ One should be able to summon tame Bill's Wills from Windoze keys in WMode.
 Teleport disabling.
 Teleport should bounce back from valpurium.
 It should be possible to determine line height as a felist draw function argument. (comment: why?)
-Vomiting in a shop should have a special effect.
 *Intelligent monsters should read scrolls and use wands.
 Several types of critical hits (e.g. one that throws the opponent one square backwards).
 Highscores should be crypted somehow.
@@ -159,7 +158,7 @@ Msghistory max length to conf.
 Opening a can should be more difficult with less hands.
 Fly function for character.
 Item category "rubbish" which would contain bananapeals and roubles.
-Cumulative comments to script.
+//Cumulative comments to script.
 Material-colored cursor.
 Wand levels.
 Talking to oneself should abuse intelligence.
@@ -168,7 +167,7 @@ Possibility to override keys that felist accepts.
 Angels should become hostile if the player's relation to their DivineMaster drops radically.
 Explosions could be m-colored: this way magical explosions could look different.
 WoDC should clone its own material to created doors.
-Wishing for corpse should give something.
+Wishing for "corpse" should give something.
 Poison should spread from bodypart to bodypart. (from JM)
 Titles and bonuses. (from JM)
 Informative pictures to message panel. (from JM)
@@ -267,10 +266,9 @@ An environmentalist character who would protest outside the Cathedral against th
 Monsters shouldn't drink antidote liquid if they don't need it.
 Ask for auto wear for picked up items.
 The spirit appearing in fountains should have a picture.
-*Teleport trap.
 Town portal scroll.
 Small shadows for items. (one pixel right and down from the items graphic)
-*Using sickle or scythe against plants should yield a bonus.
+//*Using sickle or scythe against plants should yield a bonus.
 "Select the direction you wish to enter Attnam from".
 Petrus should offer a small meal for player when he first visits him.
 Unlike their colleagues, Nefas's angels should have a groin.
@@ -307,7 +305,7 @@ There should be an "unusable" state for bodyparts about to be severed.
 There should be more ways to put back or summon missing bodyparts of pets.
 It should be possible to change materials of golems.
 Windows on walls.
-One shoudl be able to wish for a new limb.
+One should be able to wish for a new limb.
 Ring of conflict should cause two-headed mooses to kill themselves.
 You should be able to wish for anything. (Very problematic, I know)
 Leash.
@@ -328,9 +326,9 @@ If the player has a floating eye in his team and has ESP, the eye's field of vis
 Options for sorting massacre history
 Potion of receive random stat (better name needed).
 Options for sorting massacre history.
-There should be a special effect for zapping a holy banana.
+//There should be a special effect for zapping a holy banana.
 Magical compass that shows the way to Attnam or other major city.
-More replies for dogs.
+//More replies for dogs.
 Shops should replenish their inventory frequently. (from JM)
 Exploding potions (other than vodka). (from JM)
 Wand of create monster. (from JM)
@@ -359,17 +357,17 @@ Floods. (from JM)
 Wand's explosive effect strength should depend on its charges.
 Alpha halos to some other items, too.
 Arm m-color 3 should be allocated for gauntlets.
-Engraved messages should be shown in the lookmode.
+//Engraved messages should be shown in the lookmode.
 Shirt of the Golden Eagle shouldn't emit light unless it's worn.
-Uring the lookmode while polymorphed into a floating eye should have a special effect.
-The starting puppy dies in every game. It should be named Kenny.
-If player uses heal command (h) when his/her HPs are at max, the game should wait for a player specified number of turns.
+Using the lookmode while polymorphed into a floating eye should have a special effect.
+//The starting puppy dies in every game. It should be named Kenny.
+//If player uses heal command (h) when his/her HPs are at max, the game should wait for a player specified number of turns.
 //The starting puppy dies in every game. It should be named Kenny.
 Raining frogs.
 Zombies transporting vodka.
 Hangover state.
-Gods shouldn't like spoiled corpses.
-Teleport trap.
+*Gods shouldn't like spoiled corpses.
+*Teleport trap.
 Poisoned food.
 A wand which could penetrate walls.
 Lockpick item.
@@ -404,6 +402,5 @@ Houses floating in water.
 Fountain of youth.
 Sometimes when taking (really bad) damage the player might receive permanent wounds (or in other words loose a couple of points from the MaxHP of the bodypart taking damage.)
 If one monster can see an invisible player, then it should reveal his location his comrades, too.
-*HEALING SHOULD STOP IF A MAGE ATTACKS!!!
+//*HEALING SHOULD STOP IF A MAGE ATTACKS!!!
 Cave paintings.
-
