@@ -1228,7 +1228,7 @@ golem
 	UsesNutrition = false;
 	AttachedGod = NONE;
 	ClassStates = GAS_IMMUNITY;
-	Frequency = 2000;
+	Frequency = 1500;
 	CanTalk = false;
 	CanRead = true;
 
